# umaAI

./: README.md  go.mod  pyproject.toml
cmd/umaai/: main.go
data/characters/: oguri_cap.py
data/support_cards/: default_deck.py
docs/: ura_scenario.md
internal/cv/: cv.go
internal/sim/race/: race.go
internal/sim/uma/: uma.go
scripts/: auto_sim.py  decide.py  manual_test.py
src/uma_ai/: __init__.py
src/uma_ai/analysis/: __init__.py  plots.py
src/uma_ai/cards/: __init__.py  gametora.py  manual.py
src/uma_ai/career/: __init__.py  actions.py  engine.py  loader.py  models.py  scenario.py
src/uma_ai/cv/: __init__.py  screen_reader.py
src/uma_ai/data/characters/: oguri_cap.py
src/uma_ai/data/support_cards/: default_deck.py
src/uma_ai/heuristics/: __init__.py  planner.py  scoring.py
src/uma_ai/logging/: __init__.py  turn_logger.py
src/uma_ai/scenarios/: __init__.py  ura.py
src/uma_ai/ui/: __init__.py  detection.py
tests/: test_career_engine.py  test_ura_scenario.py
